Change collect(Collectors.toList()) to map.toList() in UserService