@@ -106,6 +106,6 @@ public class UserService implements UserServiceInterface {
     public List<IntentionDTO> activatedIntentionsOf(Long anId) {
         User getUser = this.userRepository.findById(anId)
                 .orElseThrow(() -> new UserNotFoundException(anId));
-        return getUser.activatedIntentions().map(intention -> intentionMapper.toIntentionDto(intention)).collect(Collectors.toList());
+        return getUser.activatedIntentions().map(intention -> intentionMapper.toIntentionDto(intention)).toList();
     }
 }
